@@ -181,6 +181,19 @@
 					<posy>254</posy>
 					<width>960</width>
 					<height>20</height>
+					<info>Player.ProgressCache</info>
+					<reveal>true</reveal>
+					<texturebg>osd/fullscreen/progress/cache-back.png</texturebg>
+					<midtexture>osd/fullscreen/progress/cache-mid.png</midtexture>
+					<lefttexture>osd/fullscreen/progress/cache-left.png</lefttexture>
+					<righttexture>osd/fullscreen/progress/cache-right.png</righttexture>
+					<overlaytexture>-</overlaytexture>
+				</control>
+				<control type="progress">
+					<posx>480</posx>
+					<posy>254</posy>
+					<width>960</width>
+					<height>20</height>
 					<info>Player.Progress</info>
 					<reveal>true</reveal>
 					<texturebg>osd/fullscreen/progress/back.png</texturebg>
